--- a/analysis/VEB_Boost_Derivation.Rmd
+++ b/analysis/VEB_Boost_Derivation.Rmd
@@ -264,37 +264,10 @@ $$
 $$
 
 
-# Example
-In this section, I carry out an example, where the true mean response follows the tree structure in the example tree. For simplicity, each $\mu_j$ results from a single effect, where we have a true effect variable $X_j$ with corresponding effect $\beta_j$. The fitting function at each node is a weighted SER, where the variables included are $X_j$ and a null (randomly generated) variable $X_j^{null}$.
-
+# Examples
+Below, I load the VEB-Boost-Node object, and define some functions needed for running a weighted SuSiE SER.
 ```{r}
 source("./code/VEB_Boost_Node.R") # load VEB_Boost_Node object
-
-### MAKE DATA
-set.seed(1138)
-
-n = 1000
-
-X1 = rnorm(n)
-X2 = rnorm(n)
-X3 = rnorm(n)
-X4 = rnorm(n)
-X5 = rnorm(n)
-X1_null = rnorm(n)
-X2_null = rnorm(n)
-X3_null = rnorm(n)
-X4_null = rnorm(n)
-X5_null = rnorm(n)
-
-beta1 = rnorm(1)
-beta2 = rnorm(1)
-beta3 = rnorm(1)
-beta4 = rnorm(1)
-beta5 = rnorm(1)
-
-mu_true = ((X1*beta1) * ((X2*beta2) + (X3*beta3))) + ((X4*beta4) * (X5*beta5)) 
-
-Y = mu_true + rnorm(n)
 
 # function for calculating 2nd moment for weighted SER
 calc_Q = function(X, Sigma2, Mu, Alpha) {
@@ -352,6 +325,103 @@ weighted_SER = function(X, Y, sigma2, prior_var = 1) {
   
   return(list(mu1 = as.numeric(mu1), mu2 = as.numeric(mu2), KL_div = KL_div, alpha = alpha, mu = mu, sigma2_post = sigma2_post))
 }
+
+### MAKE DATA
+set.seed(1138)
+
+n = 1000
+
+X1 = rnorm(n)
+X2 = rnorm(n)
+X3 = rnorm(n)
+X4 = rnorm(n)
+X5 = rnorm(n)
+X1_null = rnorm(n)
+X2_null = rnorm(n)
+X3_null = rnorm(n)
+X4_null = rnorm(n)
+X5_null = rnorm(n)
+
+X = cbind(X1, X2, X3, X4, X5, X1_null, X2_null, X3_null, X4_null, X5_null)
+
+beta1 = rnorm(1)
+beta2 = rnorm(1)
+beta3 = rnorm(1)
+beta4 = rnorm(1)
+beta5 = rnorm(1)
+
+library(susieR) # for later
+```
+
+## SuSiE Example
+If all operators are "+", and each fitting function is a single effect regression with the SuSiuE SER prior, and the same matrix of predictors is used for all base learners, then this is equivalent to SuSiE with $L$ effects (where $L$ is the number of terminal nodes in our tree)
+
+Below, I generate data from the SuSiE model with $L = 5$ effects. I also generate 5 "null" variables to include in my model fitting procedure. I fit the data with a regular SuSiE call (without an intercept), as well as using VEB-Boost with a tree structure with 5 terminal nodes and all operators are "+". For simplicity, I fix the prior variance to be 1 in both cases rather than estimate it.
+
+```{r}
+mu_true = (X1*beta1) + (X2*beta2) + (X3*beta3) + (X4*beta4) + (X5*beta5)
+
+Y = mu_true + rnorm(n)
+
+fitFn = function(Y, sigma2, init) {
+  return(weighted_SER(X, Y, sigma2))
+}
+
+# generate learner, initialize fits w/ fit function w/ full response Y and variance sigma2
+learner = VEBBoostNode$new(".", operator = "+")
+learner$Y = Y
+learner$sigma2 = 1
+L = learner$AddChildVEB("L", operator = "+")$
+  AddChildVEB("mu_1", fitFunction = fitFn, currentFit = list(mu1 = rep(0, length(Y)), mu2 = rep(1, length(Y)), KL_div = 1))$parent$
+  AddChildVEB("LR", operator = "+")$
+  AddChildVEB("mu_2", fitFunction = fitFn, currentFit =list(mu1 = rep(0, length(Y)), mu2 = rep(1, length(Y)), KL_div = 1))$parent$
+  AddChildVEB("mu_3", fitFunction = fitFn, currentFit = list(mu1 = rep(0, length(Y)), mu2 = rep(1, length(Y)), KL_div = 1))$root$
+  AddChildVEB("R", operator = "+")$
+  AddChildVEB("mu_4", fitFunction = fitFn, currentFit = list(mu1 = rep(0, length(Y)), mu2 = rep(1, length(Y)), KL_div = 1))$parent$
+  AddChildVEB("mu_5", fitFunction = fitFn, currentFit = list(mu1 = rep(0, length(Y)), mu2 = rep(1, length(Y)), KL_div = 1))
+
+# update until ELBO increase is < 1e-6, track ELBO along the way
+ELBOs = numeric(100)
+ELBOs[1] = -Inf
+ELBOs[2] = learner$ELBO
+i = 2
+while (ELBOs[i] - ELBOs[i-1] > 1e-6) {
+  learner$Do(function(x) x$updateFit(), filterFun = function(x) x$isLeaf)
+  i = i+1
+  ELBOs[i] = learner$ELBO
+}
+ELBOs = ELBOs[2:i]
+
+susie.fit = fit.susie = susie(X, Y, L = 5, scaled_prior_variance = 1 / var(Y), intercept = F, tol = 1e-6)
+```
+
+In the code above, when fitting the tree, I have forced the initialization of the base learners to have a first moment of 0 and a second moment of 1 (in an attempt to initialize in a similar way to SuSiE). I have also fit SuSiE without an intercept for simplicity.
+
+The first two plots below show the effect vectors from each of the 5 effects, fitted from the tree and SuSiE respectively. The third plot shows the difference between the fitted values between the tree and SuSiE fit.
+```{r}
+effect_mat_tree = matrix(0, nrow = ncol(X), ncol = 5)
+for (i in 1:5) {
+  name = paste("mu_", i, sep = "")
+  node = learner$FindNode(name)
+  effect_mat_tree[, i] = node$currentFit$mu * node$currentFit$alpha
+}
+
+par(mfrow = c(1, 2))
+matplot(effect_mat_tree, type = 'l', ylab = "Effect", main = "Tree Fit Effects")
+matplot(t(susie.fit$mu * susie.fit$alpha), type = 'l', ylab = "Effect", main = "SuSiE Fit Effects")
+par(mfrow = c(1, 1))
+plot(susie.fit$fitted - learner$mu1, ylab = "Difference in Fitted Values", main = "SuSiE vs. Tree Fitted Values", pch = 19)
+```
+The plots show that the fitted effect vectors are virtually identical, and that the fitted values are almost 0.
+
+## Example with Truth Generated from the Tree Structure Image Above
+In this section, I carry out an example, where the true mean response follows the tree structure in the example tree. For simplicity, each $\mu_j$ results from a single effect, where we have a true effect variable $X_j$ with corresponding effect $\beta_j$. The fitting function at each node is a weighted SER, where the variables included are $X_j$ and a null (randomly generated) variable $X_j^{null}$.
+
+```{r}
+mu_true = ((X1*beta1) * ((X2*beta2) + (X3*beta3))) + ((X4*beta4) * (X5*beta5)) 
+
+Y = mu_true + rnorm(n)
+
 
 ### Define fitting functions for each node
 fitFn1 = function(Y, sigma2, init) {
@@ -434,8 +504,6 @@ Despite this sign switching, our SERs were effectively able to identify the rele
 
 Next, we can look at the errors between the true mean values and the fitted first moment. As a comparison, we can fit the data (all 5 real variables and 5 null variables) with a SuSiE model where we set $L = 5$.
 ```{r}
-library(susieR)
-X = cbind(X1, X2, X3, X4, X5, X1_null, X2_null, X3_null, X4_null, X5_null)
 fit.susie = susie(X, Y, L = 5)
 
 MSE_VEB = mean((mu_true - learner$mu1)^2)
