--- a/analysis/VEB_Boost_Derivation.Rmd
+++ b/analysis/VEB_Boost_Derivation.Rmd
@@ -328,27 +328,9 @@ weighted_SER = function(X, Y, sigma2, prior_var = 1) {
 
 ### MAKE DATA
 set.seed(1138)
-
 n = 1000
-
-X1 = rnorm(n)
-X2 = rnorm(n)
-X3 = rnorm(n)
-X4 = rnorm(n)
-X5 = rnorm(n)
-X1_null = rnorm(n)
-X2_null = rnorm(n)
-X3_null = rnorm(n)
-X4_null = rnorm(n)
-X5_null = rnorm(n)
-
-X = cbind(X1, X2, X3, X4, X5, X1_null, X2_null, X3_null, X4_null, X5_null)
-
-beta1 = rnorm(1)
-beta2 = rnorm(1)
-beta3 = rnorm(1)
-beta4 = rnorm(1)
-beta5 = rnorm(1)
+X = matrix(rnorm(10 * n), nrow = n)
+beta = c(rnorm(5), rep(0, 5))
 
 library(susieR) # for later
 ```
@@ -359,7 +341,7 @@ If all operators are "+", and each fitting function is a single effect regressio
 Below, I generate data from the SuSiE model with $L = 5$ effects. I also generate 5 "null" variables to include in my model fitting procedure. I fit the data with a regular SuSiE call (without an intercept), as well as using VEB-Boost with a tree structure with 5 terminal nodes and all operators are "+". For simplicity, I fix the prior variance to be 1 in both cases rather than estimate it.
 
 ```{r}
-mu_true = (X1*beta1) + (X2*beta2) + (X3*beta3) + (X4*beta4) + (X5*beta5)
+mu_true = as.numeric(X %*% beta)
 
 Y = mu_true + rnorm(n)
 
@@ -415,33 +397,17 @@ plot(susie.fit$fitted - learner$mu1, ylab = "Difference in Fitted Values", main 
 The plots show that the fitted effect vectors are virtually identical, and that the fitted values are almost 0.
 
 ## Example with Truth Generated from the Tree Structure Image Above
-In this section, I carry out an example, where the true mean response follows the tree structure in the example tree. For simplicity, each $\mu_j$ results from a single effect, where we have a true effect variable $X_j$ with corresponding effect $\beta_j$. The fitting function at each node is a weighted SER, where the variables included are $X_j$ and a null (randomly generated) variable $X_j^{null}$.
+In this section, I carry out an example, where the true mean response follows the tree structure in the example tree. For simplicity, each $\mu_j$ results from a single effect, where we have a true effect variable $X_j$ with corresponding effect $\beta_j$. The fitting function at each node is a weighted SER, where we include all 5 effect variables, as well as 5 null variables (the same null variables are used at each node).
 
 ```{r}
-mu_true = ((X1*beta1) * ((X2*beta2) + (X3*beta3))) + ((X4*beta4) * (X5*beta5)) 
+mu_true = ((X[, 1]*beta[1]) * ((X[, 2]*beta[2]) + (X[, 3]*beta[3]))) + ((X[, 4]*beta[4]) * (X[, 5]*beta[5])) 
 
 Y = mu_true + rnorm(n)
 
 
 ### Define fitting functions for each node
-fitFn1 = function(Y, sigma2, init) {
-  return(weighted_SER(X = cbind(X1, X1_null), Y, sigma2))
-}
-
-fitFn2 = function(Y, sigma2, init) {
-  return(weighted_SER(X = cbind(X2, X2_null), Y, sigma2))
-}
-
-fitFn3 = function(Y, sigma2, init) {
-  return(weighted_SER(X = cbind(X3, X3_null), Y, sigma2))
-}
-
-fitFn4 = function(Y, sigma2, init) {
-  return(weighted_SER(X = cbind(X4, X4_null), Y, sigma2))
-}
-
-fitFn5 = function(Y, sigma2, init) {
-  return(weighted_SER(X = cbind(X5, X5_null), Y, sigma2))
+fitFn = function(Y, sigma2, init) {
+  return(weighted_SER(X, Y, sigma2))
 }
 
 # generate learner, initialize fits w/ fit function w/ full response Y and variance sigma2
@@ -449,13 +415,13 @@ learner = VEBBoostNode$new(".", operator = "+")
 learner$Y = Y
 learner$sigma2 = 1
 L = learner$AddChildVEB("L", operator = "*")$
-  AddChildVEB("mu_1", fitFunction = fitFn1, currentFit = fitFn1(learner$Y, learner$sigma2, NULL))$parent$
+  AddChildVEB("mu_1", fitFunction = fitFn, currentFit = fitFn(learner$Y, learner$sigma2, NULL))$parent$
   AddChildVEB("LR", operator = "+")$
-  AddChildVEB("mu_2", fitFunction = fitFn2, currentFit = fitFn2(learner$Y, learner$sigma2, NULL))$parent$
-  AddChildVEB("mu_3", fitFunction = fitFn3, currentFit = fitFn3(learner$Y, learner$sigma2, NULL))$root$
+  AddChildVEB("mu_2", fitFunction = fitFn, currentFit = fitFn(learner$Y, learner$sigma2, NULL))$parent$
+  AddChildVEB("mu_3", fitFunction = fitFn, currentFit = fitFn(learner$Y, learner$sigma2, NULL))$root$
   AddChildVEB("R", operator = "*")$
-  AddChildVEB("mu_4", fitFunction = fitFn4, currentFit = fitFn4(learner$Y, learner$sigma2, NULL))$parent$
-  AddChildVEB("mu_5", fitFunction = fitFn5, currentFit = fitFn5(learner$Y, learner$sigma2, NULL))
+  AddChildVEB("mu_4", fitFunction = fitFn, currentFit = fitFn(learner$Y, learner$sigma2, NULL))$parent$
+  AddChildVEB("mu_5", fitFunction = fitFn, currentFit = fitFn(learner$Y, learner$sigma2, NULL))
 
 # update until ELBO increase is < 1e-6, track ELBO along the way
 ELBOs = numeric(100)
@@ -478,29 +444,28 @@ As a sanity-check, we see that the ELBO is monotonically increasing. However, to
 
 Next, we can look at the fitted models at each node and see how they performed.
 ```{r, results = "asis"}
-make_table = function(node) {
-  name = node$name
-  beta_true = ifelse(name == "mu_1", beta1, 
-                     ifelse(name == "mu_2", beta2, 
-                            ifelse(name == "mu_3", beta3,
-                                   ifelse(name == "mu_4", beta4, beta5))))
+make_table = function(i) {
+  name = paste("mu_", i, sep = "")
+  node = learner$FindNode(name)
+  beta_true = ifelse(name == "mu_1", beta[1], 
+                     ifelse(name == "mu_2", beta[2], 
+                            ifelse(name == "mu_3", beta[3],
+                                   ifelse(name == "mu_4", beta[4], beta[5]))))
   
-  alpha = node$currentFit$alpha[1]
-  mu = node$currentFit$mu[1]
+  alpha = node$currentFit$alpha[i]
+  mu = node$currentFit$mu[i]
   
   return(c(alpha, mu, beta_true))
 }
 
-fit_table = sapply(c("mu_1", "mu_2", "mu_3", "mu_4", "mu_5"), function(x) make_table(learner$FindNode(x)))
+fit_table = sapply(1:5, make_table)
 row.names(fit_table) = c("alpha", "mu", "beta_true")
 
 library(xtable)
 print(xtable(fit_table, caption = "Base Learner Fits"), comment = F, type = "html")
 ```
 
-As we can see, we observe the identifiability issue in practice. $\mu_1$ and $\mu_2, \; \mu_3$ joinly swapped signs ($\mu_3$ is close to null, so the sign isn't really flipped from the truth). Similarly, $\mu_4$ and $\mu_5$ jointly swapped signs.
-
-Despite this sign switching, our SERs were effectively able to identify the relevant variables (with the exception of $mu_3$, whose true effect is close to null).
+Our SERs were effectively able to identify the relevant variables on the left side of our tree. However, we were unable to fit $\mu_4$ or $\mu_5$ well. I am not sure why we observe this behavior. A different initialization may remedy the issue.
 
 Next, we can look at the errors between the true mean values and the fitted first moment. As a comparison, we can fit the data (all 5 real variables and 5 null variables) with a SuSiE model where we set $L = 5$.
 ```{r}
@@ -513,4 +478,4 @@ MSE_SuSiE = mean((mu_true - fit.susie$fitted)^2)
 plot(mu_true - fit.susie$fitted, ylab = "Error", main = paste("SuSiE Error: MSE = ", round(MSE_SuSiE, 3), sep = ""), pch = 19)
 ```
 
-We can see that VEB-Boost far out-performed SuSiE. This is expected due to the non-linear nature of the truth.
+We can see that VEB-Boost outperformed SuSiE, which is expected due to the non-linear nature of the truth.
