--- a/analysis/VEB_Boost_Derivation.Rmd
+++ b/analysis/VEB_Boost_Derivation.Rmd
@@ -71,7 +71,7 @@ $$
 
 
 ## Formal Model
-Let $T(\mu_1, \dots, \mu_K)$ be the learner implied by a given tree structure $T$ and base learners $\mu_j$. Then the formal model for VEB-Boosting for the given tree and base learners is given by:
+Let $T(\mu_1, \dots, \mu_K)$ be the learner implied by a given tree structure $T$ and base learners $\mu_j$ (e.g. in the example above, $T(\mu_1, \dots, \mu_5 = \Big(\mu_1 \circ (\mu_2 + \mu_3)\Big) + (\mu_4 \circ \mu_5)$). Then the formal model for VEB-Boosting for the given tree and base learners is given by:
 $$
 \begin{aligned}
 Y = T\Big(\mu_1, \dots, \mu_L\Big) + E \\
@@ -79,6 +79,7 @@ Y = T\Big(\mu_1, \dots, \mu_L\Big) + E \\
 E \sim \mathcal{N}(0, \sigma^2 I_n) \\
 \end{aligned}
 $$
+(Note that the model easily extends to the case of non-constant variance, since the building-blocks are already based on weighted regression).
 
 To fit this model, we use variational inference with a mean-field approximation $\mathcal{Q}$:
 $$
@@ -97,7 +98,7 @@ $$
 
 In general, for a base learner at a terminal node at position $s = d_1 \cdots d_K$, we can describe the tree as:
 $$
-\nu_{\bar{d_1}} \oplus_\cdot \Bigg(\nu_{d_1 \bar{d_2}} \oplus_{d_1} \Big(\nu_{d_1 d_2 \bar{d_3}} \oplus_{d_2} \cdots (\mu_j \oplus_{d_1 d_2 \cdots d_{k-1}} \nu_{d_1 d_2 \cdots d_{k-1} \bar{d_k}}) \cdots\Big)\Bigg)
+\nu_{\bar{d_1}} \oplus_\cdot \Bigg(\nu_{d_1 \bar{d_2}} \oplus_{d_1} \Big(\nu_{d_1 d_2 \bar{d_3}} \oplus_{d_2} \cdots (\mu_j \oplus_{d_1 d_2 \cdots d_{K-1}} \nu_{d_1 d_2 \cdots d_{K-1} \bar{d_K}}) \cdots\Big)\Bigg)
 $$
 
 In words, we halve the tree at each step, combining the half that doesn't include $\mu_j$ into a single learner and repeat until we get to $\mu_j$.
@@ -111,7 +112,7 @@ If we combine $\nu := \nu_1 + \nu_2$, then:
 $$
 \begin{aligned}
 \mathbb{E}_{q_1, q_2}[\nu] = \mathbb{E}_{q_1, q_2}[\nu_1 + \nu_2] = \bar{\nu_1} + \bar{\nu_2} \\
-\mathbb{E}_{q_1, q_2}[\nu^2] = \mathbb{E}_{q_1, q_2}[\nu_1^2 + 2\nu_1\nu_2 + \nu_2^2] = \bar{\nu_1^2} + 2\bar{\nu_1}\bar{\nu_2} + \bar{\nu_2^2}
+\mathbb{E}_{q_1, q_2}[\nu^2] = \mathbb{E}_{q_1, q_2}[\nu_1^2 + 2\nu_1\nu_2 + \nu_2^2] = \overline{\nu_1^2} + 2\bar{\nu_1}\bar{\nu_2} + \overline{\nu_2^2}
 \end{aligned}
 $$
 
@@ -119,7 +120,7 @@ If we combine $\nu := \nu_1 \circ \nu_2$, then:
 $$
 \begin{aligned}
 \mathbb{E}_{q_1, q_2}[\nu] = \mathbb{E}_{q_1, q_2}[\nu_1 \circ \nu_2] = \bar{\nu_1} \circ \bar{\nu_2} \\
-\mathbb{E}_{q_1, q_2}[\nu^2] = \mathbb{E}_{q_1, q_2}[\nu_1^2 \circ \nu_2^2] = \bar{\nu_1^2} \circ \bar{\nu_2^2}
+\mathbb{E}_{q_1, q_2}[\nu^2] = \mathbb{E}_{q_1, q_2}[\nu_1^2 \circ \nu_2^2] = \overline{\nu_1^2} \circ \overline{\nu_2^2}
 \end{aligned}
 $$
 
@@ -142,10 +143,10 @@ In terms of a specific $\mu_j$ in position $s = d_1 \cdots d_K$ (and the corresp
 $$
 \mathbb{E}_{q_j} \Bigg[-\frac{n}{2} \log(2\pi\sigma^2) - \frac{1}{2} \mathbb{E}_{q_{-j}} \Big[\Big\|\Big(Y \circ \frac{1}{\vec{\sigma}}\Big) - \Big(T(\mu) \circ \frac{1}{\vec{\sigma}}\Big)\Big\|_2^2\Big]\Bigg] + \sum_{l=1}^L \mathbb{E}_{q_l} \Bigg[\log \frac{g_l(\mu_l)}{q_l(\mu_l)}\Bigg] = \\
 \mathbb{E}_{q_j}\Bigg[-\frac{1}{2} \mathbb{E}_{q_{-j}}\Big[\Big\|\Big(Y \circ \frac{1}{\vec{\sigma}}\Big) - \Big(T(\mu) \circ \frac{1}{\vec{\sigma}}\Big)\Big\|_2^2\Big]\Bigg] + \mathbb{E}_{q_j} \Bigg[\log \frac{g_j(\mu_j)}{q_j(\mu_j)}\Bigg] + (const \; in \; \mu_j,q_j, g_j) = \\
-\mathbb{E}_{q_j}\Bigg[-\frac{1}{2} \mathbb{E}_{q_{-j}}\Big[\Big\|\Big(Y \circ \frac{1}{\vec{\sigma}}\Big) - \Big(\nu_{\bar{d_1}} \oplus_\cdot \Bigg(\nu_{d_1 \bar{d_2}} \oplus_{d_1} \Big(\nu_{d_1 d_2 \bar{d_3}} \oplus_{d_2} \cdots (\mu_j \oplus_{d_1 d_2 \cdots d_{k-1}} \nu_{d_1 d_2 \cdots d_{k-1} \bar{d_k}}) \cdots\Big)\Bigg) \circ \frac{1}{\vec{\sigma}}\Big)\Big\|_2^2\Big]\Bigg] + \mathbb{E}_{q_j} \Bigg[\log \frac{g_j(\mu_j)}{q_j(\mu_j)}\Bigg] + (const \; in \; \mu_j,q_j, g_j)
+\mathbb{E}_{q_j}\Bigg[-\frac{1}{2} \mathbb{E}_{q_{-j}}\Big[\Big\|\Big(Y \circ \frac{1}{\vec{\sigma}}\Big) - \Big(\nu_{\bar{d_1}} \oplus_\cdot \Bigg(\nu_{d_1 \bar{d_2}} \oplus_{d_1} \Big(\nu_{d_1 d_2 \bar{d_3}} \oplus_{d_2} \cdots (\mu_j \oplus_{d_1 d_2 \cdots d_{K-1}} \nu_{d_1 d_2 \cdots d_{K-1} \bar{d_K}}) \cdots\Big)\Bigg) \circ \frac{1}{\vec{\sigma}}\Big)\Big\|_2^2\Big]\Bigg] + \mathbb{E}_{q_j} \Bigg[\log \frac{g_j(\mu_j)}{q_j(\mu_j)}\Bigg] + (const \; in \; \mu_j,q_j, g_j)
 $$
 
-For a given operator $\oplus$, and implied distribution over $\nu_2$ (with first moment $\bar{\nu_2}$ and second moment $\bar{\nu_2^2}$), define
+For a given operator $\oplus$, and implied distribution over $\nu_2$ (with first moment $\bar{\nu_2}$ and second moment $\overline{\nu_2^2}$), define
 $$
 \nu_1 \bar{\oplus} \nu_2 :=
 \begin{cases}
@@ -156,17 +157,17 @@ $$
 
 Next, define
 $$
-\tilde{Y} := \Bigg(\cdots \Big( (Y \bar{\oplus}_\cdot \nu_{\bar{d_1}}) \bar{\oplus}_{d_1} \nu_{d_1 \bar{d_2}}\Big) \bar{\oplus}_{d_1d_2} \cdots \bar{\oplus}_{d_1 \cdots d_{K-1}} \nu_{d_1 \cdots d_{k-1}\bar{d_K}}\Bigg)
+\tilde{Y} := \Bigg(\cdots \Big( (Y \bar{\oplus}_\cdot \nu_{\bar{d_1}}) \bar{\oplus}_{d_1} \nu_{d_1 \bar{d_2}}\Big) \bar{\oplus}_{d_1d_2} \cdots \bar{\oplus}_{d_1 \cdots d_{K-1}} \nu_{d_1 \cdots d_{K-1}\bar{d_K}}\Bigg)
 $$
 and define
 $$
-\vec{Q^2} := \circ_s \bar{\nu_{sd}^2}
+\vec{Q^2} := \circ_s \overline{\nu_{s\overline{d}}^2}
 $$
-where $s$ runs over all partials string of $d_1 \cdots d_{K-1}$ such that $\oplus_s = \circ$ and $d$ follows $s$ in $d_1 \cdots d_{K}$.
+where $s$ runs over all partials string of $d_1 \cdots d_{K-1}$ such that $\oplus_s = \circ$ and $d$ follows $s$ in $d_1 \cdots d_{K}$ (i.e. as you go up the path from the base learner $\mu_j$ to the root, $\vec{Q^2}$ is the schur product of the second moments of the learners that are joined to this path by Schur multiplication but are not on the path themselves).
 
 With these definitions in place, we make the following claim:
 $$
-\mathbb{E}_{q_j}\Bigg[-\frac{1}{2} \mathbb{E}_{q_{-j}}\Big[\Big\|\Big(Y \circ \frac{1}{\vec{\sigma}}\Big) - \Big(\nu_{\bar{d_1}} \oplus_\cdot \Bigg(\nu_{d_1 \bar{d_2}} \oplus_{d_1} \Big(\nu_{d_1 d_2 \bar{d_3}} \oplus_{d_2} \cdots (\mu_j \oplus_{d_1 d_2 \cdots d_{k-1}} \nu_{d_1 d_2 \cdots d_{k-1} \bar{d_k}}) \cdots\Big)\Bigg) \circ \frac{1}{\vec{\sigma}}\Big)\Big\|_2^2\Big]\Bigg] + \mathbb{E}_{q_j} \Bigg[\log \frac{g_j(\mu_j)}{q_j(\mu_j)}\Bigg] + (const \; in \; \mu_j,q_j, g_j) = \\
+\mathbb{E}_{q_j}\Bigg[-\frac{1}{2} \mathbb{E}_{q_{-j}}\Big[\Big\|\Big(Y \circ \frac{1}{\vec{\sigma}}\Big) - \Big(\nu_{\bar{d_1}} \oplus_\cdot \Bigg(\nu_{d_1 \bar{d_2}} \oplus_{d_1} \Big(\nu_{d_1 d_2 \bar{d_3}} \oplus_{d_2} \cdots (\mu_j \oplus_{d_1 d_2 \cdots d_{k-1}} \nu_{d_1 d_2 \cdots d_{K-1} \bar{d_K}}) \cdots\Big)\Bigg) \circ \frac{1}{\vec{\sigma}}\Big)\Big\|_2^2\Big]\Bigg] + \mathbb{E}_{q_j} \Bigg[\log \frac{g_j(\mu_j)}{q_j(\mu_j)}\Bigg] + (const \; in \; \mu_j,q_j, g_j) = \\
 \mathbb{E}_{q_j} \Bigg[-\frac{1}{2} \Bigg\|\Big(\tilde{Y} \circ \vec{\frac{Q}{\sigma}}\Big) - \Big(\mu_j \circ \vec{\frac{Q}{\sigma}}\Big)\Bigg\|_2^2\Bigg] + \mathbb{E}_{q_j} \Bigg[\log \frac{g_j(\mu_j)}{q_j(\mu_j)}\Bigg] + (const \; in \; \mu_j,q_j, g_j)
 $$
 
@@ -200,11 +201,11 @@ In both cases, the ELBO has the desired form.
 **Inductive Step: Assume true for $K-1$**
 In this case, the ELBO is
 $$
-\mathbb{E}_{q_j}\Bigg[-\frac{1}{2} \mathbb{E}_{q_{-j}}\Big[\Big\|\Big(Y \circ \frac{1}{\vec{\sigma}}\Big) - \Big(\nu_{\bar{d_1}} \oplus_\cdot \Bigg(\nu_{d_1 \bar{d_2}} \oplus_{d_1} \Big(\nu_{d_1 d_2 \bar{d_3}} \oplus_{d_2} \cdots (\mu_j \oplus_{d_1 d_2 \cdots d_{k-1}} \nu_{d_1 d_2 \cdots d_{k-1} \bar{d_k}}) \cdots\Big)\Bigg) \circ \frac{1}{\vec{\sigma}}\Big)\Big\|_2^2\Big]\Bigg] + \mathbb{E}_{q_j} \Bigg[\log \frac{g_j(\mu_j)}{q_j(\mu_j)}\Bigg] + (const \; in \; \mu_j,q_j, g_j)
+\mathbb{E}_{q_j}\Bigg[-\frac{1}{2} \mathbb{E}_{q_{-j}}\Big[\Big\|\Big(Y \circ \frac{1}{\vec{\sigma}}\Big) - \Big(\nu_{\bar{d_1}} \oplus_\cdot \Bigg(\nu_{d_1 \bar{d_2}} \oplus_{d_1} \Big(\nu_{d_1 d_2 \bar{d_3}} \oplus_{d_2} \cdots (\mu_j \oplus_{d_1 d_2 \cdots d_{k-1}} \nu_{d_1 d_2 \cdots d_{K-1} \bar{d_K}}) \cdots\Big)\Bigg) \circ \frac{1}{\vec{\sigma}}\Big)\Big\|_2^2\Big]\Bigg] + \mathbb{E}_{q_j} \Bigg[\log \frac{g_j(\mu_j)}{q_j(\mu_j)}\Bigg] + (const \; in \; \mu_j,q_j, g_j)
 $$
 Define
 $$
-\nu_{d_1} := \Bigg(\nu_{d_1 \bar{d_2}} \oplus_{d_1} \Big(\nu_{d_1 d_2 \bar{d_3}} \oplus_{d_2} \cdots (\mu_j \oplus_{d_1 d_2 \cdots d_{k-1}} \nu_{d_1 d_2 \cdots d_{k-1} \bar{d_k}}) \cdots\Big)\Bigg)
+\nu_{d_1} := \Bigg(\nu_{d_1 \bar{d_2}} \oplus_{d_1} \Big(\nu_{d_1 d_2 \bar{d_3}} \oplus_{d_2} \cdots (\mu_j \oplus_{d_1 d_2 \cdots d_{K-1}} \nu_{d_1 d_2 \cdots d_{K-1} \bar{d_K}}) \cdots\Big)\Bigg)
 $$
 
 So we can write the ELBO more compactly as
@@ -232,7 +233,7 @@ $$
 [\text{Split expectation over} -j] = \\
 \mathbb{E}_{q_j}\Bigg[-\frac{1}{2} \mathbb{E}_{d_1}\Big[-2\Big(Y \circ \bar{\nu}_{\bar{d_1}} \circ \frac{1}{\vec{\sigma}}\Big)^T \Big(\nu_{d_1} \circ \frac{1}{\vec{\sigma}}\Big) + \Big\|\sqrt{\bar{\nu^2}_{\bar{d_1}}} \circ \nu_{d_1} \circ \frac{1}{\vec{\sigma}}\Big\|_2^2\Big]\Bigg]  + (const \; in \; \mu_j,q_j, g_j) = \\
 \mathbb{E}_{q_j} \Bigg[-\frac{1}{2} \mathbb{E}_{d_1} \Big[\Big\|\Big(Y \circ \frac{\bar{\nu}_{\bar{d_1}}}{\bar{\nu^2}_{\bar{d_1}}} \circ \frac{\sqrt{\bar{\nu^2}_{\bar{d_1}}}}{\vec{\sigma}}\Big) - \Big(\nu_{d_1} \circ \frac{\sqrt{\bar{\nu^2}_{\bar{d_1}}}}{\vec{\sigma}}\Big)\Big\|_2^2\Big]\Bigg]  + (const \; in \; \mu_j,q_j, g_j) = \\ = \\
-[\text{Inductive Step, with response } Y \circ \frac{\bar{\nu}_{\bar{d_1}}}{\bar{\nu^2}_{\bar{d_1}}} \circ \frac{\sqrt{\bar{\nu^2}_{\bar{d_1}}}}{\vec{\sigma}} \text{and variances } \frac{\bar{\nu^2}_{\bar{d_1}}}{\vec{\sigma}}] = \\
+[\text{Inductive Step, with response } Y \circ \frac{\bar{\nu}_{\bar{d_1}}}{\bar{\nu^2}_{\bar{d_1}}} \text{and variances } \frac{\vec{\sigma^2}}{\bar{\nu^2}_{\bar{d_1}}}] = \\
 \mathbb{E}_{q_j} \Bigg[-\frac{1}{2} \Bigg\|\Big(\tilde{Y} \circ \vec{\frac{Q}{\sigma}}\Big) - \Big(\mu_j \circ \vec{\frac{Q}{\sigma}}\Big)\Bigg\|_2^2\Bigg] + (const \; in \; \mu_j,q_j, g_j)
 \end{aligned}
 $$
@@ -254,7 +255,7 @@ $$
 -\frac{n}{2} \log(2\pi\sigma^2) - \frac{1}{2\sigma^2} \Bigg[\Big\|Y\Big\|_2^2 - 2Y^T \overline{T(\mu)} + \Big\|\sqrt{\overline{T(\mu)^2}} \Big\|_2^2\Bigg] - \sum_{l=1}^L D_{KL}\Big(Q_l \| G_l\Big)
 $$
 
-If we store the KL divergergence for each of our terminal nodes, the first 2 moments of the fitted models at each terminal node, and have a way of calculating the first 2 moments for the entire tree, then calculating the ELBO is easy.
+If we store the KL divergergence for each of our terminal nodes, the first 2 moments of the fitted models at each terminal node, and have a way of combining the moments for the entire tree, then calculating the ELBO is easy.
 
 
 ## Updating $\sigma^2$
@@ -262,220 +263,3 @@ After our coordinate ascent steps for $(q_l, g_l)$, we can take a coordinate asc
 $$
 \widehat{\sigma^2} = \frac{1}{n}\Bigg[\Big\|Y\Big\|_2^2 - 2Y^T \overline{T(\mu)} + \Big\|\sqrt{\overline{T(\mu)^2}} \Big\|_2^2\Bigg]
 $$
-
-
-# Examples
-Below, I load the VEB-Boost-Node object, and define some functions needed for running a weighted SuSiE SER.
-```{r}
-source("./code/VEB_Boost_Node.R") # load VEB_Boost_Node object
-
-# function for calculating 2nd moment for weighted SER
-calc_Q = function(X, Sigma2, Mu, Alpha) {
-  # X is data matrix
-  # Sigma2[j, l] is the posterior variance for b_l when entry j is selected, p x L
-  # Mu[j, l] is the posterior mean for b_l when entry j is selected, p x L
-  # Alpha[j, l] is the posterior probability selecting entry j from b_l, p x L
-  # Z is matrix of covariates (e.g. column for intercept, top 10 PCs, etc)
-  # delta is current estimate for effects of Z variables
-  
-  ASU2 = Alpha * (Sigma2 + Mu^2) # [j, l] = alpha[j, l] * (Sigma2[j, l] + Mu[j, l]^2)
-  
-  Q = rowSums(X^2 %*% ASU2) # start w/ sum_l E_(ql)[(x_i' b_l)^2]
-  
-  return(Q)
-  
-}
-
-# function for calculating KL divergence for weighted SER
-calc_KL = function(Mu, Alpha, Sigma2, prior_var = 1) {
-  p = nrow(Mu)
-  L = ncol(Mu)
-  prior_weights = rep(1/p, p)
-  P = matrix(prior_weights, nrow = p, ncol = L)
-  b_post = rowSums(Alpha * Mu)
-  
-  prior_var = matrix(prior_var, nrow = p, ncol = L, byrow = T)
-  
-  KL_div = Alpha * (log(Alpha) - log(P) + (log(prior_var) / 2) - (log(Sigma2) / 2) - .5 + ((Sigma2 + Mu^2) / (2 * prior_var)))
-  KL_div[Alpha == 0] = 0
-  return(sum(KL_div))
-}
-
-# function to perform weighted SER
-weighted_SER = function(X, Y, sigma2, prior_var = 1) {
-  if (length(sigma2) == 1) {
-    sigma2 = rep(sigma2, nrow(X))
-  }
-  prior_weights = rep(1 / ncol(X), ncol(X))
-  tau = (t(X^2) %*% (1 / sigma2)) + (1 / prior_var)
-  nu = colSums(X * Y / sigma2)
-  
-  alpha = log(prior_weights) - (.5 * log(tau)) + (.5 * nu^2 / tau)
-  alpha = alpha - max(alpha)
-  alpha = exp(alpha)
-  alpha = alpha / sum(alpha)
-  
-  mu = nu / tau
-  
-  sigma2_post = 1 / tau
-  
-  mu1 = X %*% (alpha * mu)
-  mu2 = calc_Q(X, sigma2_post, mu, alpha)
-  KL_div = calc_KL(mu, alpha, sigma2_post, prior_var)
-  
-  return(list(mu1 = as.numeric(mu1), mu2 = as.numeric(mu2), KL_div = KL_div, alpha = alpha, mu = mu, sigma2_post = sigma2_post))
-}
-
-### MAKE DATA
-set.seed(1138)
-n = 1000
-X = matrix(rnorm(10 * n), nrow = n)
-beta = c(rnorm(5), rep(0, 5))
-
-library(susieR) # for later
-```
-
-## SuSiE Example
-If all operators are "+", and each fitting function is a single effect regression with the SuSiuE SER prior, and the same matrix of predictors is used for all base learners, then this is equivalent to SuSiE with $L$ effects (where $L$ is the number of terminal nodes in our tree)
-
-Below, I generate data from the SuSiE model with $L = 5$ effects. I also generate 5 "null" variables to include in my model fitting procedure. I fit the data with a regular SuSiE call (without an intercept), as well as using VEB-Boost with a tree structure with 5 terminal nodes and all operators are "+". For simplicity, I fix the prior variance to be 1 in both cases rather than estimate it.
-
-```{r}
-mu_true = as.numeric(X %*% beta)
-
-Y = mu_true + rnorm(n)
-
-fitFn = function(Y, sigma2, init) {
-  return(weighted_SER(X, Y, sigma2))
-}
-
-# generate learner, initialize fits w/ fit function w/ full response Y and variance sigma2
-learner = VEBBoostNode$new(".", operator = "+")
-learner$Y = Y
-learner$sigma2 = 1
-L = learner$AddChildVEB("L", operator = "+")$
-  AddChildVEB("mu_1", fitFunction = fitFn, currentFit = list(mu1 = rep(0, length(Y)), mu2 = rep(1, length(Y)), KL_div = 1))$parent$
-  AddChildVEB("LR", operator = "+")$
-  AddChildVEB("mu_2", fitFunction = fitFn, currentFit =list(mu1 = rep(0, length(Y)), mu2 = rep(1, length(Y)), KL_div = 1))$parent$
-  AddChildVEB("mu_3", fitFunction = fitFn, currentFit = list(mu1 = rep(0, length(Y)), mu2 = rep(1, length(Y)), KL_div = 1))$root$
-  AddChildVEB("R", operator = "+")$
-  AddChildVEB("mu_4", fitFunction = fitFn, currentFit = list(mu1 = rep(0, length(Y)), mu2 = rep(1, length(Y)), KL_div = 1))$parent$
-  AddChildVEB("mu_5", fitFunction = fitFn, currentFit = list(mu1 = rep(0, length(Y)), mu2 = rep(1, length(Y)), KL_div = 1))
-
-# update until ELBO increase is < 1e-6, track ELBO along the way
-ELBOs = numeric(100)
-ELBOs[1] = -Inf
-ELBOs[2] = learner$ELBO
-i = 2
-while (ELBOs[i] - ELBOs[i-1] > 1e-6) {
-  learner$Do(function(x) x$updateFit(), filterFun = function(x) x$isLeaf)
-  i = i+1
-  ELBOs[i] = learner$ELBO
-}
-ELBOs = ELBOs[2:i]
-
-susie.fit = fit.susie = susie(X, Y, L = 5, scaled_prior_variance = 1 / var(Y), intercept = F, tol = 1e-6)
-```
-
-In the code above, when fitting the tree, I have forced the initialization of the base learners to have a first moment of 0 and a second moment of 1 (in an attempt to initialize in a similar way to SuSiE). I have also fit SuSiE without an intercept for simplicity.
-
-The first two plots below show the effect vectors from each of the 5 effects, fitted from the tree and SuSiE respectively. The third plot shows the difference between the fitted values between the tree and SuSiE fit.
-```{r}
-effect_mat_tree = matrix(0, nrow = ncol(X), ncol = 5)
-for (i in 1:5) {
-  name = paste("mu_", i, sep = "")
-  node = learner$FindNode(name)
-  effect_mat_tree[, i] = node$currentFit$mu * node$currentFit$alpha
-}
-
-par(mfrow = c(1, 2))
-matplot(effect_mat_tree, type = 'l', ylab = "Effect", main = "Tree Fit Effects")
-matplot(t(susie.fit$mu * susie.fit$alpha), type = 'l', ylab = "Effect", main = "SuSiE Fit Effects")
-par(mfrow = c(1, 1))
-plot(susie.fit$fitted - learner$mu1, ylab = "Difference in Fitted Values", main = "SuSiE vs. Tree Fitted Values", pch = 19)
-```
-The plots show that the fitted effect vectors are virtually identical, and that the fitted values are almost 0.
-
-## Example with Truth Generated from the Tree Structure Image Above
-In this section, I carry out an example, where the true mean response follows the tree structure in the example tree. For simplicity, each $\mu_j$ results from a single effect, where we have a true effect variable $X_j$ with corresponding effect $\beta_j$. The fitting function at each node is a weighted SER, where we include all 5 effect variables, as well as 5 null variables (the same null variables are used at each node).
-
-```{r}
-mu_true = ((X[, 1]*beta[1]) * ((X[, 2]*beta[2]) + (X[, 3]*beta[3]))) + ((X[, 4]*beta[4]) * (X[, 5]*beta[5])) 
-
-Y = mu_true + rnorm(n)
-
-
-### Define fitting functions for each node
-fitFn = function(Y, sigma2, init) {
-  return(weighted_SER(X, Y, sigma2))
-}
-
-# generate learner, initialize fits w/ fit function w/ full response Y and variance sigma2
-learner = VEBBoostNode$new(".", operator = "+")
-learner$Y = Y
-learner$sigma2 = 1
-L = learner$AddChildVEB("L", operator = "*")$
-  AddChildVEB("mu_1", fitFunction = fitFn, currentFit = fitFn(learner$Y, learner$sigma2, NULL))$parent$
-  AddChildVEB("LR", operator = "+")$
-  AddChildVEB("mu_2", fitFunction = fitFn, currentFit = fitFn(learner$Y, learner$sigma2, NULL))$parent$
-  AddChildVEB("mu_3", fitFunction = fitFn, currentFit = fitFn(learner$Y, learner$sigma2, NULL))$root$
-  AddChildVEB("R", operator = "*")$
-  AddChildVEB("mu_4", fitFunction = fitFn, currentFit = fitFn(learner$Y, learner$sigma2, NULL))$parent$
-  AddChildVEB("mu_5", fitFunction = fitFn, currentFit = fitFn(learner$Y, learner$sigma2, NULL))
-
-# update until ELBO increase is < 1e-6, track ELBO along the way
-ELBOs = numeric(100)
-ELBOs[1] = -Inf
-ELBOs[2] = learner$ELBO
-i = 2
-while (ELBOs[i] - ELBOs[i-1] > 1e-6) {
-  learner$Do(function(x) x$updateFit(), filterFun = function(x) x$isLeaf)
-  i = i+1
-  ELBOs[i] = learner$ELBO
-}
-ELBOs = ELBOs[2:i]
-```
-
-First, we can plot the ELBOs:
-```{r}
-plot(ELBOs, main = "ELBOs")
-```
-As a sanity-check, we see that the ELBO is monotonically increasing. However, to achieve this level of convergence, it took `r length(ELBOs)` iterations.
-
-Next, we can look at the fitted models at each node and see how they performed.
-```{r, results = "asis"}
-make_table = function(i) {
-  name = paste("mu_", i, sep = "")
-  node = learner$FindNode(name)
-  beta_true = ifelse(name == "mu_1", beta[1], 
-                     ifelse(name == "mu_2", beta[2], 
-                            ifelse(name == "mu_3", beta[3],
-                                   ifelse(name == "mu_4", beta[4], beta[5]))))
-  
-  alpha = node$currentFit$alpha[i]
-  mu = node$currentFit$mu[i]
-  
-  return(c(alpha, mu, beta_true))
-}
-
-fit_table = sapply(1:5, make_table)
-row.names(fit_table) = c("alpha", "mu", "beta_true")
-
-library(xtable)
-print(xtable(fit_table, caption = "Base Learner Fits"), comment = F, type = "html")
-```
-
-Our SERs were effectively able to identify the relevant variables on the left side of our tree. However, we were unable to fit $\mu_4$ or $\mu_5$ well. I am not sure why we observe this behavior. A different initialization may remedy the issue.
-
-Next, we can look at the errors between the true mean values and the fitted first moment. As a comparison, we can fit the data (all 5 real variables and 5 null variables) with a SuSiE model where we set $L = 5$.
-```{r}
-fit.susie = susie(X, Y, L = 5)
-
-MSE_VEB = mean((mu_true - learner$mu1)^2)
-plot(mu_true - learner$mu1, ylab = "Error", main = paste("VEB-Boost Error: MSE = ", round(MSE_VEB, 3), sep = ""), pch = 19)
-
-MSE_SuSiE = mean((mu_true - fit.susie$fitted)^2)
-plot(mu_true - fit.susie$fitted, ylab = "Error", main = paste("SuSiE Error: MSE = ", round(MSE_SuSiE, 3), sep = ""), pch = 19)
-```
-
-We can see that VEB-Boost outperformed SuSiE, which is expected due to the non-linear nature of the truth.
