Adding a line on putting an independent Gaussian prior on the intercept

--- a/analysis/note_on_the_intercept.Rmd
+++ b/analysis/note_on_the_intercept.Rmd
@@ -26,3 +26,5 @@ i.e. given our effect vector $\beta$, our intercept $\mu$ is a point-mass on $c 
 The end result is that we can still perform our weighted centering of $X$ and $Y$, however we not have to treat the intercept as random, and thus is variable (depending on $\beta$).
 
 An alternative is to have a parameter for the intercept and maximize the ELBO w.r.t. that parameter as well. This can be achieved by first removing the old value of the intercept from $Y$, fitting our SER, and then set the new value of the intercept to $\tilde{Y} - \tilde{X} \bar{\beta}$. However, I prefer the first method. By allowing the intercept to be not constant, we introduce shrinkage (towards the weighted average of $Y$), which I have observed provides a benefit to model prediction performance, as well as model fitting time (by introducing some "wiggle room" into the predictions from a base learner, it is easier to fit other learners).
+
+Another alternative is to put an independent Gaussian prior on the intercept and include that in our variational approximation (we could even learn the variance using our EB procedure). The appeal here is that when we change a base learner from being fit with an SER to being fit with a constant function, we would still be able to allow variability in the constant value. I haven't explored this option much, but the effects seem to be minimal.
